# mquickjs-rs

./: .gitmodules  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md
.github/workflows/: bench.yml  ci.yml
benches/: compare.sh  js_benchmarks.rs
benches/scripts/: array.js  closure.js  fib.js  json.js  loop.js  object.js  sieve.js  string.js
docs/: BENCHMARK_ANALYSIS.md  HOW_IT_WORKS.md
src/: context.rs  lib.rs  value.rs
src/builtins/: array.rs  date.rs  error.rs  function.rs  json.rs  math.rs  mod.rs  number.rs  object.rs  regexp.rs  string.rs  typed_array.rs
src/gc/: allocator.rs  collector.rs  mod.rs
src/parser/: compiler.rs  lexer.rs  mod.rs
src/runtime/: array.rs  call.rs  function.rs  mod.rs  object.rs  property.rs  string.rs
src/util/: dtoa.rs  mod.rs  unicode.rs
src/vm/: interpreter.rs  mod.rs  opcode.rs  stack.rs
